k8s/shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-training
  labels:
    name: microservices-training
